# DSA-Labs

Lab 1.1 Programming paradigms/: Lab 1.1 Programming paradigms.ipynb
Lab 2.1 Arrays and sorting/: README.md  pyproject.toml  sort_settings.json
Lab 2.1 Arrays and sorting/examples/: favorite.py  sort.py
Lab 2.1 Arrays and sorting/src/sortlib/: bubble.py  favorite.py  insertion.py  linkedlist.py  ll_bubble.py  merge.py  mystery.py  quick.py
Lab 2.1 Arrays and sorting/tests/: test_bubble.py  test_insertion.py  test_linkedlist.py  test_ll_bubble.py  test_merge.py  test_mystery.py  test_quick.py
Lab 2.2 Abstract Syntax Trees/: README.md  pyproject.toml
Lab 2.2 Abstract Syntax Trees/examples/: main.py
Lab 2.2 Abstract Syntax Trees/src/exprlib/: binop.py  node.py  parse.py  utils.py  value.py
Lab 2.2 Abstract Syntax Trees/tests/: test_parsing.py  test_printing.py  test_utils.py
Lab 2.3 Graphs/: README.md
Lab 2.3 Graphs/data/: connections_se.txt  connections_se_broken.txt
Lab 2.3 Graphs/examples/: example_graphic.py  example_paths.py  example_shortest_path.py  example_successors.py
